temporary chat information on document processing

--- a/docs/features/index.mdx
+++ b/docs/features/index.mdx
@@ -202,7 +202,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - ✅ **Multiple Instances of Same Model in Chats**: Enhanced many model chat to support adding multiple instances of the same model.
 
-- 💬 **Temporary Chat Feature**: Introduced a temporary chat feature, deprecating the old chat history setting to enhance user interaction flexibility.
+- 💬 **Temporary Chat Feature**: Introduced a temporary chat feature, deprecating the old chat history setting to enhance user interaction flexibility. Please note that **document processing in temporary chats is performed entirely in the browser** to ensure privacy and data minimization. This means specific file types requiring backend processing (like complex DOCX parsing) may have limited functionality in temporary mode.
 
 - 🖋️ **User Message Editing**: Enhanced the user chat editing feature to allow saving changes without sending.
 
