--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -4622,7 +4622,7 @@ This is useful when you need a JWT access token for downstream validation or whe
 
 - Type: `bool`
 - Default: `True`
-- Description: Enables or disables user permission to create temporary chats.
+- Description: Enables or disables user permission to create temporary chats. **Note:** Temporary chats disable backend document parsing for privacy.
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
 #### `USER_PERMISSIONS_CHAT_TEMPORARY_ENFORCED`
