docs for web search concurrent requests

--- a/docs/features/web-search/perplexity_search.mdx
+++ b/docs/features/web-search/perplexity_search.mdx
@@ -9,6 +9,12 @@ This tutorial is a community contribution and is not supported by the Open WebUI
 
 :::
 
+:::tip
+
+For a comprehensive list of all environment variables related to Web Search (including concurrency settings, result counts, and more), please refer to the [Environment Configuration documentation](../../getting-started/env-configuration#web-search).
+
+:::
+
 ## Perplexity Search API
 
 :::info
