--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -10,7 +10,7 @@ import { SponsorList } from "@site/src/components/SponsorList";
 
 # Open WebUI
 
-![Open WebUI Banner](./banner.png)
+![Open WebUI Banner](/images/banner.png)
 
 **Open WebUI is an [extensible](https://docs.openwebui.com/features/plugin/), feature-rich, and user-friendly self-hosted AI platform designed to operate entirely offline.** It supports various LLM runners like **Ollama** and **OpenAI-compatible APIs**, with **built-in inference engine** for RAG, making it a **powerful AI deployment solution**.
 
