--- a/docs/brand.mdx
+++ b/docs/brand.mdx
@@ -7,6 +7,10 @@ title: 🎨 Design Guidelines
 
 Welcome to the Open WebUI design guidelines. This document provides the essential rules and recommendations to ensure consistent and clear use of the Open WebUI brand assets.
 
+## Brand Assets
+
+![Open WebUI Logo](/images/open-webui-brand.png)
+
 ## Brand Name Usage
 
 The official name is **Open WebUI**.
