--- a/docs/brand.mdx
+++ b/docs/brand.mdx
@@ -9,7 +9,30 @@ Welcome to the Open WebUI design guidelines. This document provides the essentia
 
 ## Brand Assets
 
-![Open WebUI Logo](/images/open-webui-brand.png)
+The following are the official Open WebUI brand assets. These assets are provided for approved use in documentation, integrations, and community materials.
+
+### Logo
+
+![Open WebUI Logo](/images/open-webui-logo.png)
+
+- Official full-color Open WebUI logo
+- Use on light, clean backgrounds for best legibility
+- Maintain adequate clear space around the logo
+- Do not modify, recolor, crop, stretch, or add effects
+
+[Download Transparent Logo](/images/open-webui-logo-transparent.png)
+
+### Icon
+
+![Open WebUI Icon](/images/open-webui-icon.png)
+
+[Download Icon](/images/open-webui-icon.png)
+
+### Asset Source
+
+- Official brand assets are available in the project repository
+- Always use the provided files rather than recreating assets manually
+- If an asset is missing or a different format is required, contact the Open WebUI team through official project channels
 
 ## Brand Name Usage
 
