--- a/docs/brand.mdx
+++ b/docs/brand.mdx
@@ -15,7 +15,7 @@ The following are the official Open WebUI brand assets. These assets are provide
 
 ![Open WebUI Logo](/images/open-webui-logo.png)
 
-- Official full-color Open WebUI logo
+- Official Open WebUI logo
 - Use on light, clean backgrounds for best legibility
 - Maintain adequate clear space around the logo
 - Do not modify, recolor, crop, stretch, or add effects
