--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -10,9 +10,10 @@ import { SponsorList } from "@site/src/components/SponsorList";
 
 # Open WebUI
 
-![Open WebUI Banner](/images/banner.png)
 
 **Open WebUI is an [extensible](https://docs.openwebui.com/features/plugin/), feature-rich, and user-friendly self-hosted AI platform designed to operate entirely offline.** It supports various LLM runners like **Ollama** and **OpenAI-compatible APIs**, with **built-in inference engine** for RAG, making it a **powerful AI deployment solution**.
+
+[![Open WebUI Banner](/images/banner.png)](https://openwebui.com)
 
 Passionate about open-source AI? [Join our team →](https://careers.openwebui.com/)
 
@@ -26,10 +27,6 @@ Passionate about open-source AI? [Join our team →](https://careers.openwebui.c
 ![GitHub last commit](https://img.shields.io/github/last-commit/open-webui/open-webui?color=red)
 [![Discord](https://img.shields.io/badge/Discord-Open_WebUI-blue?logo=discord&logoColor=white)](https://discord.gg/5rJgQTnV4s)
 [![Image Description](https://img.shields.io/static/v1?label=Sponsor&message=%E2%9D%A4&logo=GitHub&color=%23fe8e86)](https://github.com/sponsors/tjbck)
-
-
-
-
 
 ![Open WebUI Demo](/images/demo.png)
 
