--- a/docs/troubleshooting/multi-replica.mdx
+++ b/docs/troubleshooting/multi-replica.mdx
@@ -123,16 +123,27 @@ The `/app/backend/data` directory is not shared or is not consistent across repl
 ### Updates and Migrations
 
 :::danger Critical: Avoid Concurrent Migrations
-**Always scale down to 1 replica (and 1 worker) before upgrading Open WebUI versions.**
+**Always ensure only one process is running database migrations when upgrading Open WebUI versions.**
 :::
 
-Database migrations run automatically on startup. If multiple replicas (or multiple workers within a single container) start simultaneously with a new version, they may try to run migrations concurrently, leading to race conditions or database schema corruption.
+Database migrations run automatically on startup. If multiple replicas (or multiple workers within a single container) start simultaneously with a new version, they may try to run migrations concurrently, potentially leading to race conditions or database schema corruption.
 
 **Safe Update Procedure:**
-1.  **Scale Down:** Set replicas to `1` (and ensure `UVICORN_WORKERS=1` if you customized it).
-2.  **Update Image:** Application restarts with the new version.
-3.  **Wait for Health Check:** Ensure the single instance starts up fully and completes DB migrations.
-4.  **Scale Up:** Increase replicas (or `UVICORN_WORKERS`) back to your desired count.
+
+There are two ways to safely handle migrations in a multi-replica environment:
+
+#### Option 1: Designate a Master Migration Pod (Recommended)
+1.  Identify one pod/replica as the "master" for migrations.
+2.  Set `ENABLE_DB_MIGRATIONS=True` (default) on the master pod.
+3.  Set `ENABLE_DB_MIGRATIONS=False` on all other pods.
+4.  When updating, the master pod will handle the database schema update while other pods skip the migration step.
+
+#### Option 2: Scale Down During Update
+1.  **Scale Down:** Set replicas to `1` (and ensure `UVICORN_WORKERS=1`).
+2.  **Update Image:** Update the image or version.
+3.  **Wait for Health Check:** Wait for the single instance to start fully and complete migrations.
+4.  **Scale Up:** Increase replicas back to your desired count.
+
 
 ### Session Affinity (Sticky Sessions)
 While Open WebUI is designed to be stateless with proper Redis configuration, enabling **Session Affinity** (Sticky Sessions) at your Load Balancer / Ingress level can improve performance and reduce occasional jitter in WebSocket connections.
