--- a/docs/enterprise/index.mdx
+++ b/docs/enterprise/index.mdx
@@ -1,26 +1,55 @@
 ---
 sidebar_position: 400
-title: "🏢 Open WebUI for Enterprises"
+title: "🏢 Open WebUI for Enterprise"
 ---
 
 import { Testimonals } from "@site/src/components/Testimonals";
 
-## The AI Platform Powering the World’s Leading Organizations
+## The AI Platform Powering the World's Leading Organizations
 
-In the rapidly advancing AI landscape, staying ahead isn't just a competitive advantage, it’s a necessity. Open WebUI is the **fastest-growing AI platform** designed for **seamless enterprise deployment**, helping organizations leverage cutting-edge AI capabilities with **unmatched efficiency**.
+Open WebUI is one of the fastest-growing AI platforms in the world. Designed for **seamless enterprise deployment**, Open WebUI enables businesses to deploy cutting-edge AI capabilities with **complete control** over their data, infrastructure, and roadmap.
+
+Whether you're a startup scaling fast or a Fortune 500 managing global operations, Open WebUI provides the reliability, security, and flexibility your teams need to deploy AI confidently and securely—**without vendor lock-in**.
 
 ![Open WebUI, Inc.](/images/enterprise/hero.png)
 
-:::tip
+---
 
-Open WebUI is **completely free to use as-is**, with no restrictions or hidden limits.
+## Why Enterprises Choose Open WebUI
 
-We are **sustained** by our users. **Optional** licenses are available to **support** ongoing development while providing **additional benefits** for businesses.
+### 🚀 Faster Innovation, No Vendor Lock-In
+Unlike proprietary AI platforms that dictate your path, **Open WebUI puts you in control**. Deploy on-premise, in a private cloud, or hybrid environments—without restrictive contracts.
 
-:::
+### 🔒 Enterprise-Grade Security & Compliance
+Security is a business-critical requirement. Open WebUI is built to support **SOC 2, HIPAA, GDPR, FedRAMP, and ISO 27001 compliance**, ensuring enterprise security best practices with on-premise and air-gapped deployments.
+
+### ⚡ Reliable, Scalable, and Performance-Optimized
+Built for large-scale enterprise deployments with multi-node high availability, Open WebUI can be configured to ensure **99.99% uptime**, optimized workloads, and scalability across regions and business units.
+
+### 💡 Fully Customizable & Modular
+**White-label the interface** to match your brand identity. Integrate proprietary or third-party AI models. Extend functionality to fit your organization's unique workflows—Open WebUI adapts to you, not the other way around.
 
 ---
 
+## Explore Enterprise Capabilities
+
+#### [🏗️ High Availability & Architecture](./architecture)
+Understand how Open WebUI supports large-scale deployments. Explore multi-node configurations designed for 99.99% uptime, workload optimization across regions, and architectural patterns for mission-critical reliability.
+
+#### [🛡️ Security & Governance](./security)
+Learn how Open WebUI integrates with your existing identity infrastructure—including LDAP, Active Directory, and SSO providers. Ideal for organizations requiring on-premise or air-gapped deployments.
+
+#### [🔧 Integration & Customization](./customization)
+Discover how to tailor Open WebUI to your enterprise. From white-labeling the interface to match your brand, to integrating proprietary AI models and building custom features.
+
+#### [🤝 Support & SLAs](./support)
+Review the dedicated support options available to enterprise customers. Support engagements are structured to match your organization's needs—from teams requiring branding flexibility to enterprises needing hands-on guidance.
+
+---
+
+## See Open WebUI in Action
+
+Explore how other organizations are driving real impact with Open WebUI.
 
 #### Featured Customer Stories
 
@@ -36,117 +65,32 @@ Explore how other organizations are driving real impact with Open WebUI.
 
 ---
 
-## Let’s Talk
+## Ready to Get Started?
 
-:::tip
-To help us respond quickly and efficiently to your inquiry, **please use your official work email address**, Personal email accounts (e.g. gmail.com, hotmail.com, proton.me, icloud.com, yahoo.com etc.) are often flagged by our system and will not be answered.
+Whether you need a full enterprise deployment or just want to explore what Open WebUI can do for your organization, we are here to help.
+
+[**Contact Enterprise Sales**](mailto:sales@openwebui.com)
+
+:::note Are you an Agency or Reseller?
+If you are a consulting agency, solution provider, or reseller looking to deploy Open WebUI for a client, please review our **[Partnership Program Guidelines](./partners)**.
 :::
 
-**sales@openwebui.com** — Send us your deployment **end user count (seats)**, and let’s explore how we can work together!
+---
+
+## Built for Open Access
 
 :::info
-Enterprise licenses and partnership opportunities are available **exclusively to registered entities and organizations**. At this time, we are unable to accommodate individual users. We appreciate your understanding and interest.
+Open WebUI is **free to use** and our source code is publicly available. You can deploy it today without an enterprise agreement.
 
-**We are not seeking, open to, or in need of any form of disguised collaboration or contribution pitches/offers.** Any attempt to characterize engineering assistance, co-development, or roadmap input **as an alternative to our enterprise licensing program will not receive a response**. All organizational engagement with Open WebUI occurs **solely and exclusively through enterprise licensing**.
+We believe in democratizing access to AI. The Enterprise offerings above provide **governance, white labeling, liability protection, and dedicated support** for organizations that require them—but the core platform remains free and accessible to our community.
 :::
-
-Take your AI strategy to the next level with our **premium enterprise solutions**, crafted for organizations that demand **expert consulting, tailored deployment, and dedicated support.**
-
-:::warning
-
-### Partnership Guidelines for Agencies
-
-We **carefully select** our partners to maintain the **highest standards** and provide **the best experience** to our community.
-
-If you are a **consulting agency**, **AI services provider**, **solutions provider** or **reseller**, please **do not** contact our enterprise sales directly. You will **not** get a response from our sales team. Instead, **fill out our partnership interest form**:
-
-🔗 **[Apply Here](https://forms.gle/SemdgxjFXpHmdCby6)**
-
-Please understand:
-
-- We proactively select partners who **align with our mission, vision, and values**.
-- Being on our waitlist **does not guarantee a response**. If we feel there’s a strong fit, you’ll hear from us.
-- We receive **a high volume of requests** and cannot respond to every inquiry. Please **do not follow up** or send additional messages.
-- We prioritize mature organizations, companies **less than 5 years old are not eligible**, except in truly exceptional cases.
-- Our program is currently at **full capacity**. We will reach out at our discretion should an opportunity arise.
-
-<details>
-<summary>**If you have an end-client** who is ready to move forward with us and is committed to purchasing a rebrand (enterprise) license immediately...</summary>
-
-Contact us directly with:
-
-- Your agency details
-- Client’s company name and official work email domain
-- The expected number of end users (seats) to be deployed
-
-This will help us expedite the process and ensure we can support your client’s needs effectively.
-
-</details>
-
-
-Thank you for understanding and respecting our partnership process.
-
-:::
-
----
-
-## Why Enterprises Choose Open WebUI
-
-#### 🚀 Faster AI Innovation, No Vendor Lock-In
-Unlike proprietary AI platforms that dictate your roadmap, **Open WebUI puts you in control**. Deploy **on-premise, in a private cloud, or hybrid environments**—without restrictive contracts.
-
-#### 🔒 Enterprise-Grade Security & Compliance
-Security is a business-critical requirement. Open WebUI is built to support **SOC 2, HIPAA, GDPR, FedRAMP, and ISO 27001 compliance**, ensuring enterprise security best practices with **on-premise and air-gapped deployments**.
-
-#### ⚡ Reliable, Scalable, and Performance-Optimized
-Built for large-scale enterprise deployments with **multi-node high availability**, Open WebUI can be configured to ensure **99.99% uptime**, optimized workloads, and **scalability across regions and business units**.
-
-#### 💡 Fully Customizable & Modular
-Customize every aspect of Open WebUI to fit your enterprise’s needs. **White-label, extend, and integrate** seamlessly with **your existing systems**, including **LDAP, Active Directory, and custom AI models**.
-
-#### 🌍 Thriving Ecosystem with Continuous Innovation
-With one of the **fastest iteration cycles in AI**, Open WebUI ensures your organization stays ahead with **cutting-edge features** and **continuous updates**—no waiting for long release cycles.
-
----
-
-## Exclusive Enterprise Features & Services
-
-Open WebUI’s enterprise solutions provide mission-critical businesses with **a suite of advanced capabilities and dedicated support**, including:
-
-#### 🔧 Enterprise-Grade Support & SLAs
-- **Priority SLA Support** – **24/7 support** with dedicated response times for mission-critical issues.
-- **Dedicated Account Manager** – A **single point of contact** for guidance, onboarding, and strategy.
-- **Exclusive Office Hours with Core Engineers** – Directly work with the engineers evolving Open WebUI.
-
-#### ⚙ Customization & AI Model Optimization
-- **Custom Theming & Branding** – White-label Open WebUI to **reflect your enterprise identity**.
-- **Custom AI Model Integration & Fine-Tuning** – Integrate **proprietary** or **third-party** AI models tailored for your workflows.
-- **Private Feature Development** – Work directly with our team to **build custom features** specific to your organization’s needs.
-
-#### 🛡️ Advanced Security & Compliance
-- **On-Premise & Air-Gapped Deployments** – Full control over data, hosted in **your infrastructure**.
-- **Security Hardening & Compliance Audits** – Receive **customized compliance assessments** and configurations.
-- **Role-Based Access Control (RBAC)** – Enterprise-ready **SSO, LDAP, and IAM** integration.
-
-#### 🏗️ Operational Reliability & Deployment Services
-- **Managed Deployments** – Our team helps you **deploy Open WebUI effortlessly**, whether **on-premise, hybrid, or cloud**.
-- **Version Stability & Long-Term Maintenance** – Enterprise customers receive **LTS (Long-Term Support) versions** for managed **stability and security** over time.
-- **Enterprise Backups & Disaster Recovery** – High availability with structured backup plans and rapid recovery strategies.
-
-
-#### 📚 Enterprise Training, Workshops & Consulting
-- **AI Training & Enablement** – Expert-led **workshops for your engineering and data science teams**.
-- **Operational AI Consulting** – On-demand **architecture, optimization, and deployment consulting**.
-- **Strategic AI Roadmap Planning** – Work with our experts to **define your AI transformation strategy**.
 
 ---
 
 ## Keep Open WebUI Thriving ❤️
 
-Even if you **don’t need an enterprise license**, consider becoming a **sponsor** to help fund continuous development.
+Even if you **don't need an enterprise license**, consider becoming a **sponsor** to help fund continuous development.
 
-Open WebUI is free to use, but building, maintaining, and improving a platform of this scale takes real time, resources, and ongoing engineering work. Sponsorships help fund stability, security, new features, and long-term development—at a fraction of what it would cost to build and maintain an equivalent system in-house.
+Open WebUI is free to use, but building, maintaining, and improving a platform of this scale takes real time, resources, and ongoing engineering work. Sponsorships help fund stability, security, new features, and long-term development.
 
 💙 **[Sponsor Open WebUI](https://github.com/sponsors/tjbck)**
-
-Your support—through sponsorships, contributions, or enterprise partnerships—helps keep Open WebUI strong and evolving for users around the world.
